[package]
name = "rustbust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
 reqwest = { version = "0.11.10", features = ["blocking", "json", "trust-dns"] }
 tokio = { version = "1.18.0", features = ["full"] }
 clap = "3.1.18"
